--- a/style.css
+++ b/style.css
@@ -1,7 +1,81 @@
-html, body {
-  margin: 0;
-  padding: 0;
+
+body{
+
+  background-color: #b2beb5;
+  display: grid;
+  grid-template-columns: 33.3% 33.3% 33.3%;
+  grid-template-rows: 18% 12% 5% 12% 5% 12% 4% 12% 4% 12% 2%;
+  height: 100%;
+  width: 79.1%;
 }
-canvas {
-  display: block;
+
+
+
+
+#header{
+
+  grid-column-end: 3;
+  grid-column-start: 1;
+  grid-row-start: 1;
+
+
+}
+
+#row1{
+
+  grid-column-end: span 3;
+  grid-column-start: 1;
+  grid-row: 2;
+
+
+}
+
+
+
+#row2{
+  grid-column: 1/span 3;
+
+  grid-row: 3;
+}
+#row3{
+  grid-column: 1/span 3;
+
+  grid-row: 4;
+}
+#row4{
+
+  grid-column: 1/span 3;
+
+  grid-row: 5;
+
+}
+#row5{
+  grid-column: 1/span 3;
+
+  grid-row: 6;
+
+}
+#row6{
+  grid-column: 1/span 3;
+  grid-row: 7;
+}
+#row7{
+  grid-column: 1/span 3;
+  grid-row: 8;
+
+}
+#row8{
+  grid-column: 1/span 3;
+  grid-row: 9;
+
+}
+#row9{
+  grid-column: 1/span 3;
+  grid-row: 10;
+
+}
+#row10{
+  grid-column: 1/span 3;
+  grid-row: 11;
+
 }
